--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -508,3 +508,9 @@ print_r($result);
 <div class="box-end">
 </div>
 
+## ورود به پنل شارژ پلاس
+برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس ثبت‌نام وارد شوید و کسب‌وکار یا اپلیکیشن خود را در آن تعریف نمایید.
+برای ورود به پنل فوق از لینک زیر استفاده کنید:
+[پنل شارژپلاس](https://charge.fanap.plus/(
+پس از لاگین و ورود یه پنل شارژپلاس، لازم است تا اطلاعات کسب‌وکار خود را مشاهده و اپلیکیشن‌های خود را تعریف نمایید.
+      >برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس (https://panel.pod.ir/)  ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید
