--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -1,4 +1,5 @@
 - [مقدمه](#menu)
+- [دریافت توکن شارژپلاس](#menu)
 - [لیست اپراتورها](#menu)
 - [لیست خدمات اپراتور مورد نظر](#menu)
 - [پلن های در دسترس شارژمستقیم](#menu)
@@ -21,6 +22,12 @@
 
 ### هشدار
 **برای تمام درخواست ها Bearer Authentication Token الزامی است.**
+## دریافت توکن شارژپلاس
+برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس وارد شوید، اپلیکیشن خود را در آن تعریف نموده و Bearer  Authentication Token  خود را دریافت نمایید
+برای ورود به پنل شارژپلاس از لینک زیر استفاده نمایید:
+https://charge.fanap.plus
+پس از لاگین و ورود یه پنل شارژپلاس، اطلاعات کسب‌وکار خود را مشاهده نموده و اپلیکیشن‌های خود را تعریف کنید.
+برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس https://panel.pod.ir ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید.
 
 <br/>
 
@@ -507,10 +514,3 @@ print_r($result);
 
 <div class="box-end">
 </div>
-
-## ورود به پنل شارژ پلاس
-برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس وارد شوید و کسب‌وکار یا اپلیکیشن خود را در آن تعریف نمایید.
-برای ورود به پنل فوق از لینک زیر استفاده کنید:
-https://charge.fanap.plus/
-پس از لاگین و ورود یه پنل شارژپلاس، لازم است تا اطلاعات کسب‌وکار خود را مشاهده و اپلیکیشن‌های خود را تعریف نمایید.
-      > برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس (https://panel.pod.ir/)  ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید
