change charge document

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -1,5 +1,6 @@
 - [مقدمه](#menu)
 - [لیست اپراتورها](#menu)
+- [دریافت توکن شارژپلاس](#menu)
 - [لیست خدمات اپراتور مورد نظر](#menu)
 - [پلن های در دسترس شارژمستقیم](#menu)
 - [پکیج های شارژمستقیم](#menu)
@@ -15,15 +16,22 @@
 ## مقدمه
 
 شارژ پلاس خدمتی است برای تمام کسب و کارهایی که علاقه مند به فروش شارژ خطوط اعتباری هستند اما امکان تامین شارژ از طریق اپراتورها را ندارند یا هزینه زیادی برای تامین آن می پردازند.
-افزایش تعداد تلفن های همراه و بالطبع افزایش تعداد سیم کارتهای اعتباری اپراتورها، باعث شده که یکی از کسب و کارهای نسبتا فراگیر در این حوزه، فروشگاههای مجازی فروش شارژ باشند. مشکلی که در این عرصه وجود دارد این است که عمدتا برای کسب وکارهای گوناگون که علاقه مند به فروش شارژ خطوط اعتباری هستند، امکان تعامل با اپراتورها وجود ندارد یا هزینه تامین این شارژ بسیار بالاست. شما با استفاده از شارژ پلاس می توانید به راحتی برای کسب و کار خود شارژ به صورت TopUp یا شارژمستقیم و بسته‌ی اینترنتی  تامین نمایید و کارمزد برای فروش شارژ دریافت کنید. برای ورود به شارژ پلاس، لازم است تا در سامانه پاد ثبت نام کرده باشید تا با کاربری پاد خود به سامانه شارژ پلاس وارد شوید.
+افزایش تعداد تلفن های همراه و بالطبع افزایش تعداد سیم کارتهای اعتباری اپراتورها، باعث شده که یکی از کسب و کارهای نسبتا فراگیر در این حوزه، فروشگاههای مجازی فروش شارژ باشند. مشکلی که در این عرصه وجود دارد این است که عمدتا برای کسب وکارهای گوناگون که علاقه مند به فروش شارژ خطوط اعتباری هستند، امکان تعامل با اپراتورها وجود ندارد یا هزینه تامین این شارژ بسیار بالاست. شما با استفاده از شارژ پلاس می توانید به راحتی برای کسب و کار خود شارژ به صورت TopUp یا شارژمستقیم و بسته‌ی اینترنتی  تامین نمایید و کارمزد برای فروش شارژ دریافت کنید. برای ورود به شارژ پلاس، لازم است تا در سامانه پادیوم ثبت نام کرده باشید تا با کاربری پاد خود به سامانه شارژ پلاس وارد شوید.
 <br/>
 سرویس فروش شارژ به صورت پین‌کد، به زودی ارائه می‌گردد.
 
 ### هشدار
 **برای تمام درخواست ها Bearer Authentication Token الزامی است.**
 
-<br/>
 
+<div class="box-end">
+</div>
+
+## دریافت توکن شارژپلاس
+
+برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس وارد شوید، اپلیکیشن خود را در آن تعریف نموده و Bearer Authentication Token خود را دریافت نمایید برای ورود به پنل شارژپلاس از لینک زیر استفاده نمایید: https://charge.fanap.plus پس از لاگین و ورود یه پنل شارژپلاس، اطلاعات کسب‌وکار خود را مشاهده نموده و اپلیکیشن‌های خود را تعریف کنید. برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس https://panel.pod.ir ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید.
+
+<br/>
 
 <div class="mermaid">
 graph TD  
@@ -54,6 +62,8 @@ Z((پایان))
 
 <div class="box-end">
 </div>
+
+
 
 ## لیست اپراتورها
 
@@ -477,7 +487,7 @@ curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form
 curl_setopt($ch, CURLOPT_POST, 1);
 //require parameters
 $params = [
-    'scProductId' => '35931',
+    'scProductId' => '3593z',
     'invoice_id' => '',
 ];
 curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
