change charge and bank card

--- a/master/کارت بانکی.md
+++ b/master/کارت بانکی.md
@@ -26,15 +26,15 @@
 
 **ورودی:**
 
-| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
-| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
-|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
-|    SrcCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
-|    DestCardNumber     |    string  |   شماره کارت مقصد	   |      |    *    |
-|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
-|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
-|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
-|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+| نام فیلد       | نوع           | عنوان             | توضیحات                                                                                                                                                                                                                  | اجباری؟ |
+| -------------- | ------------- | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------- |
+| UserName       | string        | نام کاربری        | نام کاربری از طریق بانک در اختیار شما قرار می گیرد                                                                                                                                                                       | *       |
+| SrcCardNumber  | string        | شماره کارت مبدا   |                                                                                                                                                                                                                          | *       |
+| DestCardNumber | string        | شماره کارت مقصد   |                                                                                                                                                                                                                          | *       |
+| privateKey     | string        | کلید خصوصی        | در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد |         |
+| scVoucherHash  | Array<string> | کدهای تخفیف       |                                                                                                                                                                                                                          |         |
+| scApiKey       | string        | API KEY سرویس کال |                                                                                                                                                                                                                          | *       |
+| token          | string        | توکن احراز هویت   | در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد                                                                                                   |         |
 
 **خروجی:**
 
@@ -236,35 +236,208 @@ let getCardInformationData = {
 
 **ورودی:**
 
-| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
-| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
-|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
-|    SrcCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
-|    DestCardNumber     |    string  |   شماره کارت مقصد	   |      |    *    |
-|    Password     |    string  |   شماره کارت مقصد	   |      |    *    |
-|    Amount     |    number  |   مقدار	   |      |    *    |
-|    ExpireMonth     |    string  |   ماه تاریخ انقضا		   |      |    *    |
-|    ExpireYear     |    string  |   سال تاریخ انقضا	   |      |    *    |
-|    Cvv2     |    string  |   Cvv2	   |      |    *    |
-|    WithReferenceNumber     |    boolean  |   	   |   در صورتی که true باشد باید فیلد AuthorizationCode را در پارامترها ارسال کنیم واگر false باشد نیازی به پر کردن AuthorizationCode نیست   |    *    |
-|    AuthorizationCode     |    string  |   کد شناسایی در صورتی که مقدار withReferenceNumber برابر true باشد باید در این فیلد ارسال شود و در صورتی که مقدار withReferenceNumber برابر false باشد باید عدد 0 در این پارامتر قرار بگیرد ( مقدار این فیلد هرگز نباید خالی ارسال شود )	   |      |        |
-|    Email     |    string  |  ایمیل	   |      |        |
-|    CardName     |    string  |   نام کارت		   |      |        |
-|    ExtraData.imei	     |    string  |   شماره سریال دستگاه		   |      |        |
-|    ExtraData.OS	     |    string  |   سیستم عامل	   |      |        |
-|    ExtraData.Platform	     |    string  |   پلتفرم		   |   یکی از مقادیر: WEB,ANDROID,IOS,WINDOWS   |        |
-|    ExtraData.IP	     |    string  |  آدرس IP			   |      |        |
-|    ExtraData.UserAgent	     |    string  |   UserAgent در صورتی که Agent کاربر موبایل در دسترس نبود می بایست با مقادیر زیر تکمیل گردد
-OperationName-OperationVersion-Brand-Model		   |      |        |
-|    ExtraData.DeviceId		     |    string  |   	شناسه دستگاه	   |      |        |
-|    OriginalAddress	     |    string  |   آدرس IP درخواست دهنده	   |      |        |
-|    srcComment	     |    string  |   توضیحات مبدا	   |      |        |
-|    DestComment	     |    string  |   توضیحات مقصد	   |      |        |
-|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
-|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
-|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
-|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
-
+<table class="multiple__column">
+    <thead>
+        <tr>
+            <th>نام فیلد</th>
+            <th>نوع</th>
+            <th>عنوان</th>
+            <th>توضیحات</th>
+            <th>اجباری؟</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>UserName</td>
+            <td>string</td>
+            <td>نام کاربری</td>
+            <td>نام کاربری از طریق بانک در اختیار شما قرار می گیرد</td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>SrcCardNumber</td>
+            <td>string</td>
+            <td>شماره کارت مبدا</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>DestCardNumber</td>
+            <td>string</td>
+            <td>شماره کارت مقصد</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>Password</td>
+            <td>string</td>
+            <td>شماره کارت مقصد</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>Amount</td>
+            <td>number</td>
+            <td>مقدار</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>ExpireMonth</td>
+            <td>string</td>
+            <td>ماه تاریخ انقضا</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>ExpireYear</td>
+            <td>string</td>
+            <td>سال تاریخ انقضا</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>Cvv2</td>
+            <td>string</td>
+            <td>Cvv2</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>WithReferenceNumber</td>
+            <td>boolean</td>
+            <td></td>
+            <td>در صورتی که true باشد باید فیلد AuthorizationCode را در پارامترها ارسال کنیم واگر
+                false باشد نیازی به پر کردن AuthorizationCode نیست</td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>AuthorizationCode</td>
+            <td>string</td>
+            <td>کد شناسایی در صورتی که مقدار withReferenceNumber برابر true باشد باید در این فیلد
+                ارسال شود و در صورتی که مقدار withReferenceNumber برابر false باشد باید عدد 0 در این
+                پارامتر قرار بگیرد ( مقدار این فیلد هرگز نباید خالی ارسال شود )</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>string</td>
+            <td>ایمیل</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>CardName</td>
+            <td>string</td>
+            <td>نام کارت</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.imei</td>
+            <td>string</td>
+            <td>شماره سریال دستگاه</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.OS</td>
+            <td>string</td>
+            <td>سیستم عامل</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.Platform</td>
+            <td>string</td>
+            <td>پلتفرم</td>
+            <td>یکی از مقادیر: WEB,ANDROID,IOS,WINDOWS</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.IP</td>
+            <td>string</td>
+            <td>آدرس IP</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.UserAgent</td>
+            <td>string</td>
+            <td>UserAgent در صورتی که Agent کاربر موبایل در دسترس نبود می بایست با مقادیر زیر تکمیل
+                گردد</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>OperationName-OperationVersion-Brand-Model</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>ExtraData.DeviceId</td>
+            <td>string</td>
+            <td>شناسه دستگاه</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>OriginalAddress</td>
+            <td>string</td>
+            <td>آدرس IP درخواست دهنده</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>srcComment</td>
+            <td>string</td>
+            <td>توضیحات مبدا</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>DestComment</td>
+            <td>string</td>
+            <td>توضیحات مقصد</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>privateKey</td>
+            <td>string</td>
+            <td>کلید خصوصی</td>
+            <td>در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی
+                جایگزین کلید داده شده در سازنده خواهد شد. <br>رشته pem کلید خصوصی و یا مسیر فایل pem
+                کلید خصوصی را در این پارامتر میتوان ارسال کرد</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>scVoucherHash</td>
+            <td>Array</td>
+            <td>کدهای تخفیف</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>scApiKey</td>
+            <td>string</td>
+            <td>API KEY سرویس کال</td>
+            <td></td>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>token</td>
+            <td>string</td>
+            <td>توکن احراز هویت</td>
+            <td>در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی،
+                جایگزین توکن داده شده در سازنده خواهد شد</td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
 **خروجی:**
 
 آرایه
@@ -557,31 +730,31 @@ Signature
 
 جدول نوع کد پایانه:
 
-| کد |       نوع پایانه                           |
-| --------- | -----------------  |
-|    96     |            خودپرداز              |
-|     99    |               تحویل داری شعبه           |
-|     95    |                تلفن همراه یا پایانه فروش همراه          |
-|     97    |                  تلفن ثابت        |
-|     84    |                   پایانه فروش       |
-|     49    |                   کیوسک یا پایانهی فروش خودکار       |
-|     50    |                   اینترنت یا پایانه فروش اینترنتی       |
+| کد  | نوع پایانه                      |
+| --- | ------------------------------- |
+| 96  | خودپرداز                        |
+| 99  | تحویل داری شعبه                 |
+| 95  | تلفن همراه یا پایانه فروش همراه |
+| 97  | تلفن ثابت                       |
+| 84  | پایانه فروش                     |
+| 49  | کیوسک یا پایانهی فروش خودکار    |
+| 50  | اینترنت یا پایانه فروش اینترنتی |
 
 جدول کد پردازش تراکنش:
 
-| کد |       شرح                           |
-| --------- | -----------------  |
-|     00    |           خرید کالا و خدمات              |
-|     00    |              دریافت وجه نقد          |
-|     00    |               برگشت از خرید           |
-|     10    |               درخواست مانده حساب           |
-|     11    |               درخواست بررسی           |
-|     13    |                درخواست چکیده          |
-|     30    |                 درخواست انتقال وجه         |
-|     34    |                  انتقال وجه از        |
-|     34    |                  انتقال وجه به        |
-|     00    |                    پرداخت      |
-|     40    |                    درخواست تایید رمز کارت      |
+| کد  | شرح                    |
+| --- | ---------------------- |
+| 00  | خرید کالا و خدمات      |
+| 00  | دریافت وجه نقد         |
+| 00  | برگشت از خرید          |
+| 10  | درخواست مانده حساب     |
+| 11  | درخواست بررسی          |
+| 13  | درخواست چکیده          |
+| 30  | درخواست انتقال وجه     |
+| 34  | انتقال وجه از          |
+| 34  | انتقال وجه به          |
+| 00  | پرداخت                 |
+| 40  | درخواست تایید رمز کارت |
 
 <div class="box-end">
 </div>
@@ -593,24 +766,24 @@ Signature
 
 **ورودی:**
 
-| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
-| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
-|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
-|    SourceCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
-|    MinAmount     |    number  |   حداقل مبلغ	   |      |    *    |
-|    MaxAmount     |    number  |   حداکثر مبلغ	   |      |    *    |
-|    StartDate     |    Date  |   تاریخ شروع	   |      |    *    |
-|    EndDate     |    Date  |  تاریخ پایان		   |      |    *    |
-|    SourceDepositNumber     |    string  |  شماره سپرده مبدا	   |      |        |
-|    DestinationCardNumber     |    string  |   شماره سپرده مقصد	   |      |        |
-|    SequenceNumber     |    string  |   عنوان کارت	   |      |        |
-|    ReferenceNumber     |    string  |  شماره پیگیری	   |      |        |
-|    SourceNote     |    string  |   توضیحات مبدا	   |      |        |
-|    DestinationNote     |    string  |   توضیحات مقصد	   |      |        |
-|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
-|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
-|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
-|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+| نام فیلد              | نوع           | عنوان             | توضیحات                                                                                                                                                                                                                  | اجباری؟ |
+| --------------------- | ------------- | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------- |
+| UserName              | string        | نام کاربری        | نام کاربری از طریق بانک در اختیار شما قرار می گیرد                                                                                                                                                                       | *       |
+| SourceCardNumber      | string        | شماره کارت مبدا   |                                                                                                                                                                                                                          | *       |
+| MinAmount             | number        | حداقل مبلغ        |                                                                                                                                                                                                                          | *       |
+| MaxAmount             | number        | حداکثر مبلغ       |                                                                                                                                                                                                                          | *       |
+| StartDate             | Date          | تاریخ شروع        |                                                                                                                                                                                                                          | *       |
+| EndDate               | Date          | تاریخ پایان       |                                                                                                                                                                                                                          | *       |
+| SourceDepositNumber   | string        | شماره سپرده مبدا  |                                                                                                                                                                                                                          |         |
+| DestinationCardNumber | string        | شماره سپرده مقصد  |                                                                                                                                                                                                                          |         |
+| SequenceNumber        | string        | عنوان کارت        |                                                                                                                                                                                                                          |         |
+| ReferenceNumber       | string        | شماره پیگیری      |                                                                                                                                                                                                                          |         |
+| SourceNote            | string        | توضیحات مبدا      |                                                                                                                                                                                                                          |         |
+| DestinationNote       | string        | توضیحات مقصد      |                                                                                                                                                                                                                          |         |
+| privateKey            | string        | کلید خصوصی        | در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد |         |
+| scVoucherHash         | Array<string> | کدهای تخفیف       |                                                                                                                                                                                                                          |         |
+| scApiKey              | string        | API KEY سرویس کال |                                                                                                                                                                                                                          | *       |
+| token                 | string        | توکن احراز هویت   | در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد                                                                                                   |         |
 
 **خروجی:**
 
