add android code on virtual account

--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -12,6 +12,9 @@
 - [انتقال وجه از حساب کسب و کاری](#menu)
 - [دریافت درخواست های تسویه](#menu)
 - [تسویه خودکار](#menu)
+- [دریافت کلید خصوصی و شناسه](#menu)
+- [دریافت موجودی کیف پول](#menu)
+- [دریافت گردش حساب کیف پول](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -3956,6 +3959,236 @@ podBilling.removeAutoSettlement(removeAutoSettlementData)
 <div class="tab-end">
 </div>
 
+
+<div class="box-end">
+</div>
+
+
+## دریافت کلید خصوصی و شناسه
+
+به منظور استفاده از توابع **دریافت موجودی حساب** یا **گردش حساب** نیاز به دریافت کلید خصوصی(privateKey) و کلید شناسه(keyId) از سیستم می باشد.
+
+جهت دریافت کلیدها کافیست متد getPrivateCode را فراخوانی نمائید. خروجی این متد در قالب JsonObject خواهد بود. در ساختار خروجی شناسه privateKey و keyId جهت فراخوانی سایر توابع مورد نیاز می باشند. در زیر نمونه کد دریافت کلید خصوصی و کلید شناسه آورده شده است:
+
+**پارامترهای ورودی:**
+
+<table>
+	<tbody>
+		<tr>
+			<th>
+				عنوان</th>
+			<th>
+				توضیحات</th>
+		</tr>
+		<tr>
+			<td>
+				accessToken</td>
+			<td>
+				Access token دریافت شده از سیستم</td>
+		</tr>
+		<tr>
+			<td>
+				listener</td>
+			<td>
+				Interface پیاده سازی شده جهت دریافت خروجی</td>
+		</tr>
+	</tbody>
+</table>
+
+<br/>
+
+**نمونه کد:**
+
+<div class="tab-start">
+</div>
+
+# [Andorid](#tab/andorid)
+
+``` java
+FanapSDK.getPrivateCode(accessToken, new ResponseListener() {
+    @Override
+    public void onSuccess(JsonObject jsonObject) {
+        // Get privateCode and keyId
+        String privateCode = jsonObject.get("privateCode").getAsString();
+        String keyId = jsonObject.get("keyId").getAsString();
+    }
+
+    @Override
+    public void onFailure(Throwable t) {
+        // Handle error
+    }
+});
+```
+<div class="tab-end">
+</div>
+
+
+<div class="box-end">
+</div>
+
+## دریافت موجودی کیف پول
+
+از این تابع جهت دریافت موجودی کیف پول استفاده میشود. به منظور دریافت موجودی کیف پول باید تابع getCreditWithSign را فراخوانی نمائید
+
+**پارامترهای ورودی:**
+
+<table>
+	<tbody>
+		<tr>
+			<th>
+				عنوان</th>
+			<th>
+				توضیحات</th>
+		</tr>
+		<tr>
+			<td>
+				accessToken</td>
+			<td>
+				Access token دریافت شده از سیستم</td>
+		</tr>
+		<tr>
+			<td>
+				privateCode</td>
+			<td>
+				کلید خصوصی دریافت شده از تابع&nbsp;getPrivateCode</td>
+		</tr>
+		<tr>
+			<td>
+				userId</td>
+			<td>
+				شناسه کاربر</td>
+		</tr>
+		<tr>
+			<td>
+				keyId</td>
+			<td>
+				کلید شناسه دریافت شده از تابع&nbsp;getPrivateCode</td>
+		</tr>
+		<tr>
+			<td>
+				listener</td>
+			<td>
+				Interface پیاده سازی شده جهت دریافت خروجی</td>
+		</tr>
+	</tbody>
+</table>
+
+<br/>
+
+**نمونه کد:**
+
+<div class="tab-start">
+</div>
+
+# [Andorid](#tab/andorid)
+
+``` java
+FanapSDK.getCreditWithSign(accessToken, privateCode, userId, keyId, new ResponseListener() {
+        @Override
+        public void onSuccess(JsonObject jsonObject) {
+            JsonObject resultObject = jsonObject.get("result").getAsJsonObject();
+            JsonObject currencyObject = resultObject.get("currencySrv").getAsJsonObject();
+
+            long amount = resultObject.get("amount").getAsLong();
+            String currency = currencyObject.get("name").getAsString();
+        }
+
+        @Override
+        public void onFailure(Throwable t) {
+            // Handle error
+        }
+    });
+}
+```
+<div class="tab-end">
+</div>
+
+
+<div class="box-end">
+</div>
+
+
+## دریافت گردش حساب کیف پول
+
+از این تابع جهت دریافت گزارش گردش حساب کیف پول استفاده می­شود. به منظور دریافت لیست گردش حساب کیف پول باید تابع getAccountBillWithSign را فراخوانی نمائید
+
+**پارامترهای ورودی:**
+
+<table>
+	<tbody>
+		<tr>
+			<th>
+				عنوان</th>
+			<th>
+				توضیحات</th>
+		</tr>
+		<tr>
+			<td>
+				accessToken</td>
+			<td>
+				Access token دریافت شده از سیستم</td>
+		</tr>
+		<tr>
+			<td>
+				privateCode</td>
+			<td>
+				کلید خصوصی دریافت شده از تابع&nbsp;getPrivateCode</td>
+		</tr>
+		<tr>
+			<td>
+				offset</td>
+			<td>
+				شماره صفحه</td>
+		</tr>
+		<tr>
+			<td>
+				size</td>
+			<td>
+				تعداد آیتم های برگشت داده شده در هر صفحه</td>
+		</tr>
+		<tr>
+			<td>
+				userId</td>
+			<td>
+				شناسه کاربر</td>
+		</tr>
+		<tr>
+			<td>
+				keyId</td>
+			<td>
+				کلید شناسه دریافت شده از تابع&nbsp;getPrivateCode</td>
+		</tr>
+		<tr>
+			<td>
+				listener</td>
+			<td>
+				Interface پیاده سازی شده جهت دریافت خروجی</td>
+		</tr>
+	</tbody>
+</table>
+
+**نمونه کد:**
+
+<div class="tab-start">
+</div>
+
+# [Andorid](#tab/andorid)
+
+``` java
+FanapSDK.getAccountBillWithSign(accessToken, privateCode, 0, 50, userId, keyId, new ResponseListener() {
+    @Override
+    public void onSuccess(JsonObject jsonObject) {
+        // Get result
+    }
+
+    @Override
+    public void onFailure(Throwable t) {
+        // Handle error
+    }
+});
+```
+<div class="tab-end">
+</div>
 
 <div class="box-end">
 </div>
