fix title of a markdown

--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -1348,7 +1348,7 @@ let transferToContactData = {
 
 <br/>
 
-### انتقال وجه از کیف پول به کیف پول کاربران دیگر (مخاطب)
+### دریافت لیست انتقال‌ها
 
 با استفاده از سرویس transferToContactList می توان لیست انتقال وجه های خود را دریافت نمایید.
 <br/>
