set postmancollection for charge- new section in authentication - new SDK for wallet

--- a/master/احراز هویت کاربران.md
+++ b/master/احراز هویت کاربران.md
@@ -1,4 +1,5 @@
 - [مقدمه](#menu)
+- [انتقال کاربر به صفحه ورود](#menu)
 - [دریافت توکن از طریق لینک](#menu)
 - [دریافت توکن دسترسی از طریق OTP](#menu)
 - [به روز رسانی توکن دسترسی کاربر](#menu)
@@ -32,6 +33,122 @@ H((پایان))
 <div class="box-end">
 </div>
 
+## انتقال کاربر به صفحه ورود
+
+برای ورود کاربران از طریق SSO پاد از آدرس زیر استفاده کنید. مقدار client_id خود را در آن قرار دهید و آدرسی که میخواهید پاسخ درخواست را در آن دریافت کنید را به عنوان پارامتر redirect_uri ارسال نمایید. مقادیر **client_id** و **redirect_uri** باید منطبق بر کلید اتصال تعریف شده توسط شما باشند.
+
+
+<br/>
+  
+
+``` javascript
+[sso-address]/oauth2/authorize/
+   ?client_id=[CLIENT_ID]
+    &response_type=[code]
+    &redirect_uri=[REDIRECT_URI]
+    &scope=profile
+
+```
+
+در صورت ورود موفق کاربر، پاسخ این درخواست در آدرس بازگشت به شکل زیر است:
+
+
+دقت کنید که اگر به اسکوپ های درخواستی شما به هر دلیل اجازه دسترسی وجود نداشته باشد Code خالی برگردانده میشود.
+
+
+``` javascript
+?code=[authorization_code}
+
+```
+
+این کد در مدت کوتاهی منقضی میشود. بنابرین بلافاصله باید نسبت به دریافت access_token و refresh_token اقدام شود.
+
+فهرست کامل پارامترهای این درخواست به شرح زیر است:
+
+<table class="table table-bordered">
+    <tbody>
+        <tr>
+            <td>
+                client_id</td>
+            <td>
+                شناسه مشتری (اجباری)</td>
+            <td>
+                دریافت این مقدار از&nbsp;<a
+                    href="https://docs.pod.ir/document/business-keys-manage">پنل کسب و کار</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                response_type</td>
+            <td>
+                نوع اطلاعات درخواستی</td>
+            <td>
+                برای احراز هویت در اپلیکیشن های وب، از “code” استفاده نمایید و برای اپلیکیشن های
+                موبایل از “token” یا “id_token” استفاده نمایید.</td>
+        </tr>
+        <tr>
+            <td>
+                redirect_uri</td>
+            <td>
+                آدرس بازگشت</td>
+            <td>
+                آدرس بازگشت ثبت شده برای وبسایت، مطابق با تنظیمات پنل کسب و کار</td>
+        </tr>
+        <tr>
+            <td>
+                prompt</td>
+            <td>
+                عملیات مورد نیاز</td>
+            <td>
+                می تواند login یا signup باشد. اگر ارسال نشود، روند عادی login طی می شود</td>
+        </tr>
+        <tr>
+            <td>
+                state</td>
+            <td>
+                مقدار دلخواه که برنامه می خواهد در آدرس بازگشت، داشته باشد.</td>
+            <td>
+                &nbsp;</td>
+        </tr>
+        <tr>
+            <td>
+                scope</td>
+            <td>
+                شامل درخواست برنامه برای دسترسی به اطلاعات کاربر است.</td>
+            <td>
+                می تواند شامل یک یا چند مورد از موارد زیر باشد: profile ، email ، address ،
+                activity ، legal، phone مقدار پیش فرض profile:read میباشد و در صورت موافقت
+                کاربر، توکنی که برای این scope صادر می-شود فقط برای همان عملیات می تواند استفاده
+                شود. Scope های بالا تنها اجازه خواندن اطلاعات کاربران را به شما می دهد. در صورت
+                نیاز برای ویرایش اطلاعات کاربر :write را به انتهای اسکوپ اضافه نمایید. مثال:
+                email:write</td>
+        </tr>
+        <tr>
+            <td>
+                code_challenge</td>
+            <td>
+                این پارامتر و پارامتر بعدی برای برنامه های بدون سرور استفاده می شوند.</td>
+            <td>
+                &nbsp;</td>
+        </tr>
+        <tr>
+            <td>
+                code_challenge_method</td>
+            <td>
+                متد رمز نگاری کد</td>
+            <td>
+                &nbsp;</td>
+        </tr>
+    </tbody>
+</table>
+
+<br/>
+
+**توجــــه** : تخصیص اسکوپ ها توسط تیم فنی انجام خواهد شد و اسکوپ های بیشتر باید توسط کسب و کار درخواست داده شود.
+
+
+<div class="box-end">
+</div>
 
 ## دریافت توکن از طریق لینک
 
@@ -42,7 +159,7 @@ H((پایان))
 <br/>
   
 
-``` javascript'
+``` javascript
 ?code=[authorization_code}
 
 ```
@@ -112,7 +229,6 @@ SsoService ssoService = new SsoService();
 }
 
 ```
-
 
 # [PHP](#tab/php)
 
