--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -11,6 +11,7 @@
 - [اعتبارسنجی درخواست بسته اینترنتی](#menu)
 - [ایجاد رسید خرید بسته اینترنتی](#menu)
 - [پرداخت شارژپلاس](#menu)
+- [دریافت فایل postman](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -23,7 +24,6 @@
 
 ### هشدار
 **برای تمام درخواست ها Bearer Authentication Token الزامی است.**
-
 
 <div class="box-end">
 </div>
@@ -912,6 +912,15 @@ print_r($result);
     "status_code": 422
 }
 ```
+
+<div class="box-end">
+</div>
+
+## دریافت فایل postman
+
+ برای تست سرویس فوق از postman زیر استفاده نمایید:
+
+[دانلود postman collection](https://raw.githubusercontent.com/podiumir/docs/master/master/chargeplus-postmancollection/PodChargePlusCollection2)
 
 <div class="box-end">
 </div>
