--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -15,6 +15,7 @@
 - [دریافت کلید خصوصی و شناسه](#menu)
 - [دریافت موجودی کیف پول](#menu)
 - [دریافت گردش حساب کیف پول](#menu)
+- [دریافت SDK اندروید](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -3963,7 +3964,6 @@ podBilling.removeAutoSettlement(removeAutoSettlementData)
 <div class="box-end">
 </div>
 
-
 ## دریافت کلید خصوصی و شناسه
 
 به منظور استفاده از توابع **دریافت موجودی حساب** یا **گردش حساب** نیاز به دریافت کلید خصوصی(privateKey) و کلید شناسه(keyId) از سیستم می باشد.
@@ -4192,6 +4192,24 @@ FanapSDK.getAccountBillWithSign(accessToken, privateCode, 0, 50, userId, keyId, 
 
 <div class="box-end">
 </div>
+
+
+## دریافت SDK اندروید
+
+ SDK اندروید کیف پول به همراه یک پروژه فراخوانی نمونه را، می‌توانید از لینک زیر دانلود کنید:
+
+[دانلود SDK و نمونه](https://raw.githubusercontent.com/podiumir/docs/master/master/wallet-SDK/SampleWallet.rar)
+
+<br/>
+
+برای مشاهده نمونه سرویس‌های سمت سرور به زیان PHP، فایل زیر را دانلود کنید:
+
+[دانلود SDK و نمونه کد PHP](https://raw.githubusercontent.com/podiumir/docs/master/master/wallet-SDK/walletbackend.rar)
+
+
+<div class="box-end">
+</div>
+
 
 ## لینک‌های مرتبط
 
