postman convert to zip

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -920,7 +920,8 @@ print_r($result);
 
  برای تست سرویس فوق از postman زیر استفاده نمایید:
 
-[دانلود postman collection](https://raw.githubusercontent.com/podiumir/docs/master/master/chargeplus-postmancollection/PodChargePlusCollection2)
+[دانلود postman collection](https://raw.githubusercontent.com/podiumir/docs/master/master/chargeplus-postmancollection/PodChargePlusCollection2.rar)
+
 
 <div class="box-end">
 </div>
