--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -4075,6 +4075,8 @@ FanapSDK.getPrivateCode(accessToken, new ResponseListener() {
 
 <br/>
 
+**نکته:** این سرویس تنها در قالب SDK اندروید، ارائه می‌شود 
+
 **نمونه کد:**
 
 <div class="tab-start">
@@ -4166,6 +4168,8 @@ FanapSDK.getCreditWithSign(accessToken, privateCode, userId, keyId, new Response
 		</tr>
 	</tbody>
 </table>
+
+**نکته:** این سرویس تنها در قالب SDK اندروید، ارائه می‌شود 
 
 **نمونه کد:**
 
