change a little bit on charge document

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -659,7 +659,7 @@ print_r($result);
             </td>
             <td>
                 <p>منظور نوع سیمکارت است و شامل دائمی و اعتباری است.</p>
-                <p>اگر اپراتور همراه اول باشد باید مقدارش Prepaid_Postpaid باشد</p>
+                <p>اگر اپراتور همراه اول باشد باید مقدارش postpaid-prepaid باشد</p>
                 <p>اگر اپراتور همراه اول نباشد باید برای سیم کارت از نوع اعتباری، مقدارش
                     postpaid باشد و برای دائمی باید مقدارش prepaid باشد.</p>
             </td>
