--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -77,7 +77,13 @@ status code معادل 200  باشد یعنی پاسخ بدون خطا از سر
 
 ## دریافت توکن شارژپلاس
 
-برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس وارد شوید، اپلیکیشن خود را در آن تعریف نموده و Bearer Authentication Token خود را دریافت نمایید برای ورود به پنل شارژپلاس از لینک زیر استفاده نمایید: https://charge.fanap.plus پس از لاگین و ورود یه پنل شارژپلاس، اطلاعات کسب‌وکار خود را مشاهده نموده و اپلیکیشن‌های خود را تعریف کنید. برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس https://panel.pod.ir ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید.
+برای استفاده از سرویس‌های فوق، لازم است در پنل شارژپلاس وارد شوید، اپلیکیشن خود را در آن تعریف نموده و Bearer Authentication Token خود را دریافت نمایید برای ورود به پنل شارژپلاس از لینک زیر استفاده نمایید: https://charge.fanap.plus پس از لاگین و ورود یه پنل شارژپلاس، اطلاعات کسب‌وکار خود را مشاهده نموده و اپلیکیشن‌های خود را تعریف کنید.  
+برای دریافت توکن:
++ از منوی درگاه‌های فروش در پنل شارژ پلاس، گزینه ایجاد درگاه فروش جدید را انتخاب کنید.
++ درگاه را نام‌گذاری کرده و پس از انتخاب نوع درگاه فروش آن را دخیره نمایید.
++ پس از ایجاد درگاه فروش از طریق آیکون مشاهده‌ ، توکن مربوط به آن نمایش داده می‌شود.  
+
+ برای استفاده از API های شارژپلاس مانند سایر apiها، نیاز به شناسه مشتری (Client_Id) و رمز مشتری (Client_Secret) دارید که کافی است که از طریق ادرس https://panel.pod.ir ورود به پنل کسب وکار را انتخاب کرده و با یوزر و پسورد خود لاگین نمایید.
 
 <br/>
 
